--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "whatsapp-template",
+  "name": "MankFellix",
   "version": "1.0.0",
-  "description": "template",
+  "description": "Bot by FelliXCraft❤️",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "KatowProject",
+  "author": "FelliXCraft",
   "license": "MIT",
   "dependencies": {
     "node-superfetch": "^0.1.10",
